# NSD

./: README.md  pyproject.toml
.trae/rules/: project_rules.md
Cyberpunk Vault Dashboard Design/: README.md  index.html  package-lock.json  package.json
Cyberpunk Vault Dashboard Design/src/: App.tsx  index.css
app/solana/: useCdpActions.ts  useCdpState.ts
basalt_cdp_mvp_program/: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  Dockerfile  INTERACTION_GUIDE.md  index.html  package-lock.json  package.json  simple-interaction.ts  tsconfig.json  vite-env.d.ts
basalt_cdp_mvp_program/app/: App.tsx  index.css  main.tsx  root.tsx
basalt_cdp_mvp_program/migrations/: deploy.ts
basalt_cdp_mvp_program/programs/basalt_cdp_mvp/: Cargo.toml
basalt_cdp_mvp_program/programs/basalt_cdp_mvp/src/: constants.rs  error.rs  lib.rs
basalt_cdp_mvp_program/programs/basalt_cdp_mvp/src/instructions/: calculate_interest.rs  initialize_protocol.rs  liquidate_vault.rs  mint_usdrw.rs  mod.rs  redeem_collateral.rs
basalt_cdp_mvp_program/programs/basalt_cdp_mvp/src/state/: mod.rs  protocol_config.rs  user_vault.rs
basalt_cdp_mvp_program/scripts/: deploy-devnet.sh  setup-devnet.sh  test-devnet.ts
basalt_cdp_mvp_program/solana_backup/: config.ts  useCdpActions.ts  useProgram.ts
basalt_cdp_mvp_program/tests/: basalt_cdp_mvp.ts  basalt_cdp_mvp_bankrun.ts  package.json  tsconfig.json
nsd_minting_program/: .env  Anchor.toml  README.md  package-lock.json  package.json
nsd_minting_program/tests/: nsd_minting.ts
(+40 files in other folders)
