[package]
name = "basalt_cdp_mvp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "basalt_cdp_mvp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["localnet"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Environment-specific features for program ID management
localnet = []
devnet = []
testnet = []
mainnet-beta = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"